--- a/404.html
+++ b/404.html
@@ -1,1 +1,18 @@
-
+<!doctype html>
+<html lang="pt-br">
+<head>
+<meta charset="utf-8"/>
+<title>404 - Página não encontrada</title>
+<style>
+body{background:#0b1220;color:#e5e7eb;font-family:system-ui,Segoe UI,Inter,Roboto,sans-serif;display:flex;align-items:center;justify-content:center;height:100vh;flex-direction:column;text-align:center}
+h1{font-size:80px;color:#22c55e;margin:0}
+p{color:#9ca3af}
+a{color:#22c55e;text-decoration:none;font-weight:600}
+</style>
+</head>
+<body>
+<h1>404</h1>
+<p>Página não encontrada</p>
+<p><a href="/">Voltar</a></p>
+</body>
+</html>
