--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!doctype html>
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Calculadora PWA</title>
 
-  <meta name="theme-color" content="#111827"/>
-  <link rel="manifest" href="manifest.webmanifest">
-  <link rel="icon" href="icons/icon-192.png" sizes="192x192">
+  <!-- Manifest antigo (JSON) -->
+  <link rel="manifest" href="manifest.json" type="application/manifest+json">
+  <meta name="theme-color" content="#111827">
+  <link rel="icon" href="icons/icon-192.png" sizes="192x192" type="image/png">
 
   <style>
-    :root{
+    :root {
       --bg:#0b1220;--panel:#111827;--panel2:#0f172a;
       --txt:#e5e7eb;--muted:#9ca3af;--acc:#22c55e;--danger:#ef4444;--btn:#1f2937;
     }
@@ -69,41 +70,55 @@
     <div class="footer">PWA • Offline • Firebase Conectado</div>
   </div>
 
-  <!-- Firebase Config -->
+  <!-- Firebase -->
   <script type="module">
     import { app } from "./firebase-config.js";
     console.log("Firebase conectado:", app.name);
   </script>
 
-  <!-- Lógica da calculadora -->
+  <!-- Lógica + SW -->
   <script>
-    if('serviceWorker' in navigator){navigator.serviceWorker.register('./sw.js');}
-    const net=document.getElementById('net');
-    const upd=()=>net.textContent=navigator.onLine?'Online':'Offline';
-    window.addEventListener('online',upd);window.addEventListener('offline',upd);upd();
-    const exprEl=document.getElementById('expr'),resEl=document.getElementById('result');
-    let expr='',res='0';
-    document.querySelectorAll('[data-k]').forEach(b=>b.onclick=()=>press(b.dataset.k));
-    function press(k){
-      if(k==='AC'){expr='';res='0';draw();return;}
-      if(k==='DEL'){expr=expr.slice(0,-1);draw();return;}
-      if(k==='='){calc();return;}
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/calculadora-pwa/sw.js', { scope: '/calculadora-pwa/' })
+        .then(() => console.log("✅ Service Worker registrado"))
+        .catch(err => console.error("❌ Erro SW:", err));
+    }
+
+    const net = document.getElementById('net');
+    const updateNet = () => net.textContent = navigator.onLine ? 'Online' : 'Offline';
+    window.addEventListener('online', updateNet);
+    window.addEventListener('offline', updateNet);
+    updateNet();
+
+    const exprEl = document.getElementById('expr');
+    const resEl = document.getElementById('result');
+    let expr='', res='0';
+
+    document.querySelectorAll('[data-k]').forEach(b => b.onclick = () => press(b.dataset.k));
+
+    function press(k) {
+      if (k==='AC'){expr='';res='0';draw();return;}
+      if (k==='DEL'){expr=expr.slice(0,-1);draw();return;}
+      if (k==='='){calc();return;}
       append(k);draw();
     }
-    function append(k){
-      if(k==='×')k='*';if(k==='÷')k='/';
+
+    function append(k) {
+      if(k==='×')k='*'; if(k==='÷')k='/';
       const ops=['+','-','*','/','%','^'],last=expr.slice(-1);
       if(expr===''&&ops.includes(k)&&k!=='-')return;
       if(ops.includes(last)&&ops.includes(k)){expr=expr.slice(0,-1)+k;return;}
       expr+=k;
     }
-    function calc(){
+
+    function calc() {
       if(!expr){res='0';return draw();}
       let safe=expr.replace(/\^/g,'**');
       try{const v=Function('"use strict";return('+safe+')')();res=(+Number(v).toFixed(10)).toString();expr=''+v;}
       catch{res='Erro';}
       draw();
     }
+
     function draw(){exprEl.textContent=expr;resEl.textContent=res;}
   </script>
 </body>
