--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Conversor de Imagens PWA</title>
 
-  <!-- 🧭 Manifesto PWA -->
+  <!-- 🧭 Manifesto -->
   <link rel="manifest" href="manifest.webmanifest">
 
-  <!-- 📱 Compatibilidade iOS -->
+  <!-- 📱 Compatibilidade iOS e Android -->
   <meta name="application-name" content="Conversor de Imagens">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Conversor">
-  <link rel="apple-touch-icon" href="icons/imagem_icon_192x192.png">
+  <link rel="apple-touch-icon" href="icons/imagem_icon_512x512.png">
 
-  <!-- 🎨 Aparência -->
+  <!-- 🎨 Aparência e cor do tema -->
   <meta name="theme-color" content="#004aad">
+  <meta name="background-color" content="#004aad">
   <meta name="description" content="PWA para converter e gerar ícones em múltiplos formatos e tamanhos.">
   <link rel="icon" type="image/png" href="icons/imagem_icon_192x192.png">
 
+  <!-- 🖼️ Splash Screen personalizada -->
   <style>
     :root {
       --cor-primaria: #004aad;
@@ -36,8 +38,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 2rem;
+      justify-content: center;
       min-height: 100vh;
+      margin: 0;
       text-align: center;
     }
 
@@ -53,7 +56,6 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       max-width: 420px;
       width: 100%;
-      text-align: center;
     }
 
     input[type="file"], select, input[type="number"], button {
@@ -103,9 +105,45 @@
       font-size: 0.85rem;
       opacity: 0.7;
     }
+
+    /* Tela de Splash (mostrada ao abrir como app) */
+    #splash {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: var(--cor-primaria);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      transition: opacity 0.5s ease;
+    }
+
+    #splash img {
+      width: 120px;
+      height: 120px;
+      margin-bottom: 20px;
+      animation: fadeIn 1s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
+    }
   </style>
 </head>
 <body>
+  <!-- Splash Screen -->
+  <div id="splash">
+    <img src="icons/imagem_icon_192x192.png" alt="Logo PWA">
+    <h2>Conversor de Imagens</h2>
+    <p>Preparando o aplicativo...</p>
+  </div>
+
   <h1>Conversor e Gerador de Ícones PWA</h1>
 
   <div class="card">
@@ -142,14 +180,28 @@
     <div id="preview"></div>
   </div>
 
-  <footer>💡 Funciona offline e gera todos os tamanhos padrão de ícones PWA!</footer>
+  <footer>💡 PWA reconhecido como WebAPK (instalação automática opcional)</footer>
 
 <script>
+// Oculta a splash após carregamento
+window.addEventListener("load", () => {
+  const splash = document.getElementById("splash");
+  setTimeout(() => splash.style.opacity = "0", 700);
+  setTimeout(() => splash.style.display = "none", 1200);
+});
+
+// Registro do Service Worker
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('service-worker.js')
-    .then(() => console.log("✅ Service Worker registrado com sucesso!"))
-    .catch(err => console.error("Erro no SW:", err));
+    .then(() => console.log("✅ Service Worker registrado com sucesso!"));
 }
+
+// Detecta o evento de instalação (sem forçar prompt)
+window.addEventListener('beforeinstallprompt', (e) => {
+  e.preventDefault();
+  window.deferredPrompt = e;
+  console.log("📱 WebAPK detectado - o navegador decidirá se exibe o prompt.");
+});
 
 const upload = document.getElementById("upload");
 const format = document.getElementById("format");
@@ -160,12 +212,10 @@ const progress = document.getElementById("progress");
 const progressBar = document.getElementById("progress-bar");
 let currentImage = null;
 
-// Mostrar campos personalizados
 sizeSelect.addEventListener("change", () => {
   customSizeDiv.style.display = sizeSelect.value === "custom" ? "block" : "none";
 });
 
-// Exibir preview
 upload.addEventListener("change", (e) => {
   const file = e.target.files[0];
   if (!file) return;
@@ -182,14 +232,12 @@ upload.addEventListener("change", (e) => {
   reader.readAsDataURL(file);
 });
 
-// Função para converter e baixar
 function converterEbaixar(img, formato, largura, altura, nomeExtra = "") {
   const canvas = document.createElement("canvas");
   canvas.width = largura;
   canvas.height = altura;
   const ctx = canvas.getContext("2d");
   ctx.drawImage(img, 0, 0, largura, altura);
-
   const base64 = canvas.toDataURL(formato);
   const a = document.createElement("a");
   a.href = base64;
@@ -197,11 +245,9 @@ function converterEbaixar(img, formato, largura, altura, nomeExtra = "") {
   a.click();
 }
 
-// Converter individual
 document.getElementById("convertBtn").addEventListener("click", () => {
   if (!currentImage) return alert("Selecione uma imagem primeiro!");
   let width = currentImage.width, height = currentImage.height;
-
   if (sizeSelect.value !== "original") {
     if (sizeSelect.value === "custom") {
       width = parseInt(document.getElementById("customWidth").value) || width;
@@ -213,26 +259,21 @@ document.getElementById("convertBtn").addEventListener("click", () => {
   converterEbaixar(currentImage, format.value, width, height);
 });
 
-// Gerar todos os ícones com barra de progresso
 document.getElementById("generateAllBtn").addEventListener("click", async () => {
   if (!currentImage) return alert("Selecione uma imagem primeiro!");
-
   const tamanhos = [48, 72, 96, 128, 144, 152, 192, 256, 384, 512];
   const formato = "image/png";
   progress.style.display = "block";
   progressBar.style.width = "0%";
-
   for (let i = 0; i < tamanhos.length; i++) {
     const tamanho = tamanhos[i];
     converterEbaixar(currentImage, formato, tamanho, tamanho, `_icon`);
-    const percent = ((i + 1) / tamanhos.length) * 100;
-    progressBar.style.width = percent + "%";
+    progressBar.style.width = ((i + 1) / tamanhos.length) * 100 + "%";
     await new Promise(r => setTimeout(r, 200));
   }
-
   setTimeout(() => {
     progress.style.display = "none";
-    alert("🎉 Todos os ícones foram gerados e baixados!");
+    alert("🎉 Todos os ícones foram gerados!");
   }, 500);
 });
 </script>
