--- a/VELOCIMETRO/index.html
+++ b/VELOCIMETRO/index.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Velocímetro Offline</title>
 
+  <!-- Manifesto JSON -->
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#0b1220">
+  <link rel="icon" href="icon-192.png">
+
+  <style>
+    body {
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      background: radial-gradient(circle at center, #0d1830, #060c19);
+      color: #e6eef6;
+      font-family: "Inter", sans-serif;
+    }
+    .card {
+      width: 340px;
+      background: #0b1220;
+      border-radius: 14px;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
+    }
+    canvas { width: 100%; }
+    .speed { font-size: 64px; margin: 8px 0; font-weight: 800; }
+    .unit { font-size: 16px; color: #94a3b8; }
+    button {
+      border: 0; border-radius: 10px; padding: 10px 14px;
+      font-weight: 700; cursor: pointer; margin: 5px;
+    }
+    .btn { background: #06b6d4; color: #022; }
+    .ghost { background: transparent; color: #fff; border: 1px solid rgba(255,255,255,0.14); }
+    .version { margin-top: 10px; font-size: 12px; color: #94a3b8; }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h2>Velocímetro</h2>
+    <canvas id="gauge" width="320" height="200"></canvas>
+    <div class="speed"><span id="speedValue">0</span><span class="unit"> km/h</span></div>
+    <div>
+      <button class="btn" id="startBtn">Iniciar</button>
+      <button class="ghost" id="stopBtn">Parar</button>
+    </div>
+    <p id="status">Parado</p>
+    <p class="version" id="version"></p>
+  </div>
+
+  <!-- JS principal -->
+  <script src="app.js"></script>
+</body>
+</html>
